# PIVCHEM

./: README.md
client/: .eslintrc.json  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  AppRouter.jsx  index.css  index.js
client/src/api/: api.js
client/src/components/: AppNavbar.jsx  AppRouter.jsx  Navbar.jsx  Notify.js
client/src/components/ui/button/: Button.jsx  Button.module.css
client/src/components/ui/input/: Input.jsx  Input.module.css
client/src/pages/: AppNavbar.jsx  ChemEditor.jsx  Login.jsx
client/src/pages/chemeditor/: ChemEditor.jsx  ChemEditor.module.css
client/src/pages/login/: Login.jsx
client/src/styles/: App.css
server/: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  settings.py
server/db/: base.py  session.py
server/migrations/: env.py
server/migrations/versions/: 2023-05-01_initial.py  2023-05-03_initial.py  2023-05-16_structure_model.py  2023-05-18_user_and_compound_model.py  2024-05-04_add_invite_code_to_user_model.py  2024-10-05_users_and_compoubds_tables.py
server/src/auth/: actions.py  exceptions.py  handlers.py  jwt.py  schemas.py  services.py
server/src/compounds/: handlers.py  models.py  schemas.py  services.py  utils.py
server/src/core/: minio.py
server/src/users/: actions.py  handlers.py  hendlers.py  models.py  schemas.py  service.py  services.py
