[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Anatol Piven <anatoly.piven@solbeg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
envparse = "^0.2.0"
python-jose = "^3.3.0"
pytest = "^7.3.1"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.7.1"}
python-multipart = "^0.0.6"
httpx = "^0.24.0"
rdkit = "^2023.9.5"
minio = "^7.2.5"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
