[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Anatol Piven <anatoly.piven@solbeg.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
alembic = "^1.13.1"
uvicorn = "^0.31.0"
asyncpg = "^0.29.0"
envparse = "^0.2.0"
python-jose = "^3.3.0"
pytest = "^8.3.3"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-multipart = "^0.0.12"
httpx = "^0.27.2"
rdkit = "^2024.3.5"
minio = "^7.2.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
isort = "5.13.2"
black = "24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
